wip: updating sh file for javafx